tools/hermes/tests/fixtures/design_doc/expected.stderr

=== Hermes Verification Failed ===

[Hermes Error] hermes::doc_block

  × Documentation block error: `requires` sections are only permitted on
  │ `unsafe` functions.
    ╭─[[PROJECT_ROOT]/src/lib.rs:63:1]
 62 │ /// ```lean, hermes
 63 │ /// requires: stack.len > 0
    · ─────────────┬─────────────
    ·              ╰── problematic block
 64 │ /// ensures:
    ╰────

Error: Aborting due to 1 previous errors.
